# JustChat

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: message.hpp  utils.hpp
include/client/: client.hpp
include/server/: participant.hpp  room.hpp  server.hpp  session.hpp
src/: message.cpp  utils.cpp
src/client/: client.cpp  main.cpp
src/server/: main.cpp  room.cpp  server.cpp  session.cpp
